; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_rcc.c_RCC_DeInit.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_rcc.c_RCC_DeInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32 }

@RCC = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RCC_DeInit() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 5
  %3 = load i32, i32* %2, align 4
  %4 = or i32 %3, 1
  store i32 %4, i32* %2, align 4
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 4
  %7 = load i32, i32* %6, align 4
  %8 = and i32 %7, 150976524
  store i32 %8, i32* %6, align 4
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 5
  %11 = load i32, i32* %10, align 4
  %12 = and i32 %11, -17367041
  store i32 %12, i32* %10, align 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 5
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, -262145
  store i32 %16, i32* %14, align 4
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 4
  %19 = load i32, i32* %18, align 4
  %20 = and i32 %19, -4128769
  store i32 %20, i32* %18, align 4
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 4
  %24 = and i32 %23, -16
  store i32 %24, i32* %22, align 4
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = and i32 %27, -340
  store i32 %28, i32* %26, align 4
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = and i32 %31, -2
  store i32 %32, i32* %30, align 4
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RCC, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  store i32 0, i32* %34, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
